# bom

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: windows-release.yml
src/: app.rs  main.rs  tests.rs
src/domain/: errors.rs
src/domain/entities/: dataset.rs  edit.rs  mod.rs
src/infra/: mod.rs
src/infra/import/: csv.rs  xlsx.rs
src/infra/sqlite/: mod.rs  queries.rs  repo.rs  schema.rs
src/platform/desktop/: blocking.rs  mod.rs  paths.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/ui/pages/: mod.rs
src/ui/state/: app_state.rs
src/usecase/ports/: repo.rs
src/usecase/services/: edit_service.rs  import_service.rs  mod.rs  query_service.rs
