[package]
name = "dioxus_csv_sqlite_table"
version = "0.1.0"
authors = ["Hell HBBD <paulyu602@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1" }
anyhow = "1"
calamine = "0.24"
csv = "1.3"
directories = "5"
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
